Update from node-fetch to isomorphic-unfetch changed typing on fetchWithRetry

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": ["esnext"],
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
