--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "shotgrid-nodejs-ts",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "author": "csprance",
   "keywords": [
     "shotgrid",
     "shotgun"
   ],
   "license": "ISC",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/index",
+  "typings": "dist/index",
   "files": [
     "dist",
     "src"
@@ -44,13 +44,10 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/async-retry": "^1.4.4",
-    "@types/node-fetch": "^2.6.2",
     "@types/qs": "^6.9.7",
-    "@types/require-all": "^3.0.3",
+    "eslint-plugin-prettier": "latest",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "eslint-plugin-prettier": "latest",
-    "size-limit": "^7.0.8",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
@@ -58,9 +55,8 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "file-type": "^15.0.1",
-    "node-fetch": "^2.6.7",
-    "qs": "^6.10.5",
-    "require-all": "^3.0.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "qs": "^6.10.5"
   },
   "resolutions": {
     "**/tsdx/jest": "27.5.1",
